--- a/wp-content/languages/plugins/bbpress-pt_BR.po
+++ b/wp-content/languages/plugins/bbpress-pt_BR.po
@@ -8,7 +8,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2020-06-25 13:07-0300\n"
+"PO-Revision-Date: 2020-06-25 16:20-0300\n"
 "Language-Team: ENGLISH <jjj@bbpress.org>\n"
 "X-Generator: Poedit 2.3.1\n"
 "Last-Translator: \n"
@@ -17,7 +17,7 @@ msgstr ""
 
 #: bbpress.php:146 bbpress.php:153
 msgid "Cheatin&#8217; huh?"
-msgstr ""
+msgstr "O que há de novo"
 
 #: bbpress.php:515
 msgid "bbPress Forums"
@@ -128,7 +128,7 @@ msgstr "Fóruns"
 #: includes/admin/classes/class-bbp-admin.php:499
 #: includes/admin/classes/class-bbp-admin.php:500
 msgid "Welcome to bbPress"
-msgstr ""
+msgstr "Bom-vindo"
 
 #: includes/admin/classes/class-bbp-admin.php:514
 #: includes/admin/classes/class-bbp-admin.php:515
@@ -155,7 +155,7 @@ msgstr ""
 
 #: includes/admin/classes/class-bbp-admin.php:1036
 msgid "Welcome to bbPress %s"
-msgstr ""
+msgstr "Bom-vindo"
 
 #: includes/admin/classes/class-bbp-admin.php:1038
 msgid ""
@@ -163,6 +163,9 @@ msgid ""
 "is absolutely wonderful in every environment. Your community is going to "
 "love using it."
 msgstr ""
+"bbPress é divertido de usar, não contém cores artificiais ou conservantes, e "
+"é absolutamente maravilhoso em todos os ambientes. Sua comunidade vai adorar "
+"usá-lo."
 
 #: includes/admin/classes/class-bbp-admin.php:1064
 #: includes/admin/classes/class-bbp-admin.php:1138
@@ -208,6 +211,11 @@ msgid ""
 "importing stickies, topic tags, forum categories and the sting is now gone "
 "if you need to remove imported users."
 msgstr ""
+"Estamos orgulhosos dos nossos novos importadores, AEF, Drupal, FluxBB, "
+"Kunena Forums for Joomla, MyBB, Phorum, PHPFox, PHPWind, PunBB, SMF, Xenforo "
+"e XMB. Os importadores existentes foram melhorados, ao importar itens fixos, "
+"etiquetas de tópicos, categorias de fóruns, e remover utilizadores "
+"importados."
 
 #: includes/admin/classes/class-bbp-admin.php:1097
 msgid "Theme Compatibility"
@@ -215,15 +223,15 @@ msgstr "Compatibilidade do tema"
 
 #: includes/admin/classes/class-bbp-admin.php:1098
 msgid "Better handling of styles and scripts in the template stack."
-msgstr ""
+msgstr "Melhor funcionamento de estilos e scripts no conjunto de modelos."
 
 #: includes/admin/classes/class-bbp-admin.php:1102
 msgid "Polyglot support"
-msgstr ""
+msgstr "Suporte Poliglota"
 
 #: includes/admin/classes/class-bbp-admin.php:1103
 msgid "bbPress fully supports automatic translation updates."
-msgstr ""
+msgstr "bbPress suporta inteiramente actualizações automáticas de traduções."
 
 #: includes/admin/classes/class-bbp-admin.php:1107
 msgid "User capabilities"
@@ -241,7 +249,7 @@ msgstr "Ir para Configurações do fórum"
 
 #: includes/admin/classes/class-bbp-admin.php:1144
 msgid "bbPress is created by a worldwide swarm of busy, busy bees."
-msgstr ""
+msgstr "o bbPress é criado por um enxame mundial de abelhas muitíssimo ativas."
 
 #: includes/admin/classes/class-bbp-admin.php:1146
 msgid "Project Leaders"
@@ -249,7 +257,7 @@ msgstr "Lideres de Porjeto"
 
 #: includes/admin/classes/class-bbp-admin.php:1150
 msgid "Founding Developer"
-msgstr ""
+msgstr "Programador fundador"
 
 #: includes/admin/classes/class-bbp-admin.php:1154
 msgid "Lead Developer"
@@ -257,7 +265,7 @@ msgstr "Lider de Desenvolvimento"
 
 #: includes/admin/classes/class-bbp-admin.php:1158
 msgid "Feature Virtuoso"
-msgstr ""
+msgstr "Lista de recursos"
 
 #: includes/admin/classes/class-bbp-admin.php:1162
 msgid "Tool Maven"
@@ -265,28 +273,28 @@ msgstr ""
 
 #: includes/admin/classes/class-bbp-admin.php:1166
 msgid "Contributing Developers"
-msgstr ""
+msgstr "Desenvolvedores colaboradores"
 
 #: includes/admin/classes/class-bbp-admin.php:1170
 #: includes/admin/classes/class-bbp-admin.php:1174
 msgid "Core Developer"
-msgstr ""
+msgstr "Desenvolvedor Principal"
 
 #: includes/admin/classes/class-bbp-admin.php:1178
 msgid "Project Emeriti"
-msgstr ""
+msgstr "Projeto Emeriti"
 
 #: includes/admin/classes/class-bbp-admin.php:1182
 msgid "Feature Developer"
-msgstr ""
+msgstr "Desenvolvedor de recursos"
 
 #: includes/admin/classes/class-bbp-admin.php:1186
 msgid "Integration Testing"
-msgstr ""
+msgstr "Teste de integração"
 
 #: includes/admin/classes/class-bbp-admin.php:1190
 msgid "Contributors to bbPress 2.6"
-msgstr ""
+msgstr "Colaboradores do bbPress 2.6"
 
 #: includes/admin/classes/class-bbp-admin.php:1275
 #: includes/admin/classes/class-bbp-admin.php:1298
@@ -307,18 +315,24 @@ msgstr "Voltar"
 msgid ""
 "You can update your forum through this page. Hit the link below to update."
 msgstr ""
+"Você pode atualizar seu fórum através desta página. Clique no link abaixo "
+"para atualizar."
 
 #: includes/admin/classes/class-bbp-admin.php:1372
 msgid ""
 "Warning! Problem updating %1$s. Your server may not be able to connect to "
 "sites running on it. Error message: %2$s"
 msgstr ""
+"Aviso! Problema ao atualizar %1$s. Seu servidor pode não conseguir se "
+"conectar aos sites em execução nele. Mensagem de erro: %2$s"
 
 #: includes/admin/classes/class-bbp-admin.php:1397
 msgid ""
 "If your browser doesn&#8217;t start loading the next page automatically, "
 "click this link:"
 msgstr ""
+"Se o seu navegador não começar a carregar a próxima página automaticamente, "
+"clique neste link:"
 
 #: includes/admin/classes/class-bbp-admin.php:1398
 msgid "Next Forums"
@@ -330,10 +344,13 @@ msgid ""
 "calling the update script of each site automatically. Hit the link below to "
 "update."
 msgstr ""
+"Você pode atualizar todos os fóruns da sua rede através desta página. Ele "
+"funciona chamando o script de atualização de cada site automaticamente. "
+"Clique no link abaixo para atualizar."
 
 #: includes/admin/classes/class-bbp-converter-base.php:154
 msgid "Database connection failed."
-msgstr ""
+msgstr "Erro na conexão com o banco de dados"
 
 #: includes/admin/classes/class-bbp-converter.php:162
 #: includes/admin/settings.php:1794
@@ -346,27 +363,27 @@ msgstr "Continuar"
 
 #: includes/admin/classes/class-bbp-converter.php:166
 msgid "Starting Import..."
-msgstr "Importando..."
+msgstr "Começando Inportação..."
 
 #: includes/admin/classes/class-bbp-converter.php:167
 msgid "Continuing Import..."
-msgstr ""
+msgstr "Importando..."
 
 #: includes/admin/classes/class-bbp-converter.php:170
 msgid "Import Finished."
-msgstr ""
+msgstr "Importação Terminou."
 
 #: includes/admin/classes/class-bbp-converter.php:171
 msgid "Import Stopped (by User.)"
-msgstr ""
+msgstr "Importação  terminada pelo usuário"
 
 #: includes/admin/classes/class-bbp-converter.php:172
 msgid "Import Halted (Error.)"
-msgstr ""
+msgstr "Importação parou (Erro)."
 
 #: includes/admin/classes/class-bbp-converter.php:173
 msgid "Database Connection Failed."
-msgstr ""
+msgstr "Erro na conexão com o banco de dados"
 
 #: includes/admin/classes/class-bbp-converter.php:176
 msgid "Finished"
@@ -382,39 +399,39 @@ msgstr "Começando"
 
 #: includes/admin/classes/class-bbp-converter.php:179
 msgid "Doing step %s..."
-msgstr ""
+msgstr "Executando passo %s..."
 
 #: includes/admin/classes/class-bbp-converter.php:180
 msgid "Next in %s seconds..."
-msgstr ""
+msgstr "Próximo em %s segundos"
 
 #: includes/admin/classes/class-bbp-converter.php:513
 msgid "Readying sync-table"
-msgstr ""
+msgstr "Preparando a tabela de sincronização"
 
 #: includes/admin/classes/class-bbp-converter.php:514
 msgid "Sync-table ready"
-msgstr ""
+msgstr "Tabela de sincronização pronta"
 
 #: includes/admin/classes/class-bbp-converter.php:517
 msgid "Deleting previously converted data (%1$s through %2$s)"
-msgstr ""
+msgstr "Excluindo dados convertidos anteriormente (%1$s a %2$s)"
 
 #: includes/admin/classes/class-bbp-converter.php:524
 msgid "Skipping sync-table clean-up"
-msgstr ""
+msgstr "Pulando a limpeza da tabela de sincronização"
 
 #: includes/admin/classes/class-bbp-converter.php:539
 msgid "No users to import"
-msgstr ""
+msgstr "Sem usuários para importar"
 
 #: includes/admin/classes/class-bbp-converter.php:540
 msgid "All users imported"
-msgstr ""
+msgstr "Usuários importados"
 
 #: includes/admin/classes/class-bbp-converter.php:543
 msgid "Converting users (%1$s through %2$s of %3$s)"
-msgstr ""
+msgstr "Convertendo usuários (%1$s a %2$s de %3$s)"
 
 #: includes/admin/classes/class-bbp-converter.php:547
 msgid "Skipping user clean-up"
@@ -709,7 +726,7 @@ msgstr ""
 #: includes/admin/forums.php:122 includes/admin/replies.php:137
 #: includes/admin/topics.php:141
 msgid "Available Actions"
-msgstr ""
+msgstr "Ações"
 
 #: includes/admin/forums.php:124
 msgid ""
@@ -747,7 +764,7 @@ msgstr ""
 #: includes/admin/tools/upgrade.php:60 includes/admin/tools/upgrade.php:192
 #: includes/admin/topics.php:159
 msgid "Bulk Actions"
-msgstr ""
+msgstr "Ações"
 
 #: includes/admin/forums.php:138
 msgid ""
@@ -769,7 +786,7 @@ msgstr ""
 #: includes/admin/tools/help.php:72 includes/admin/tools/help.php:130
 #: includes/admin/topics.php:167 includes/admin/topics.php:220
 msgid "For more information:"
-msgstr ""
+msgstr "Leia mais"
 
 #: includes/admin/forums.php:145 includes/admin/forums.php:201
 #: includes/admin/replies.php:162 includes/admin/replies.php:216
@@ -5871,7 +5888,7 @@ msgstr ""
 
 #: templates/default/bbpress/form-topic.php:249
 msgid "You must be logged in to create new topics."
-msgstr "Você precisa estar autenticado para criar tópicos"
+msgstr "Você precisa estar autenticado para criar tópicos."
 
 #: templates/default/bbpress/form-user-edit.php:27
 msgid "First Name"
